--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -1,3 +1,4 @@
 <p>
-  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }}
+  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} -
+  <span class="credit">Proudly Hosted on <a href="https://github.com/andrhamm/andrhamm.github.io">GitHub</a></span>
 </p>
